<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">StudiPassau</string>
    <string name="load_activity_name">Loading Stud.IP Data&#8230;</string>
    <string name="title_activity_schedule">StudiPassau Schedule</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="studip_user_format">Stud.IP User</string>
    <string name="studip_username" translatable="false">studip01</string>
    <string name="button_settings">Settings</string>
    <string name="button_about">About this app</string>
    <string name="cat_misc">Miscellaneous</string>
    <string name="button_bugreport">Report a bug</string>
    <string name="title_activity_settings">StudiPassau Settings</string>
    <string name="pref_cat_data_sync">Synchronization</string>
    <string name="pref_title_schedule_subscreen">Schedule</string>
    <string name="pref_title_mensa_subscreen">Mensa menu</string>
    <string name="title_activity_mensa">Mensa menu Uni Passau</string>
    <string name="chicken">Poultry</string>
    <string name="pig">Pig</string>
    <string name="cow">Cow</string>
    <string name="wild">Wild</string>
    <string name="lamb">Lamb</string>
    <string name="fish">Fish</string>
    <string name="alcohol">Alcohol</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="vegan">Vegan</string>
    <string name="vital">Mensa Vital</string>
    <string name="oeko">DE-ÖKO-006</string>
    <string name="juradistl">Juradistl</string>
    <string name="bioland">Bioland</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="soup">Soup</string>
    <string name="mains">Main Dishes</string>
    <string name="garnishes">Garnishes</string>
    <string name="desserts">Desserts</string>
    <string name="students">Students</string>
    <string name="guests">Guests</string>
    <string name="servants">Servants</string>
    <string name="loading_user_data">Loading user data&#8230;</string>
    <string name="loading_user_pic">Loading profile picture&#8230;</string>
    <string name="open_in_browser">Open in Browser</string>
    <string name="title_activity_about">About StudiPassau App</string>
    <string name="about_string">Hello, Student!\n\nI\'m Nico Mexis, a student at the University of Passau, and I am developing this app.\nIf you encounter any bugs, feel free to contact me via email or click the \"Report a bug\" option in the drawer menu.\n\nHave a great day and see you soon,\nNico\n\nI do not assume liability for any error!</string>
    <string name="email">Email: nico.mexis@kabelmail.de</string>
    <string name="send_mail">Send Email&#8230;</string>
    <string name="source">View Source on GitHub</string>
    <string name="unknown">Unknown</string>
    <string name="pref_desc_general_subscreen">The App\'s general behavior</string>
    <string name="pref_title_general_subscreen">General</string>
    <string name="pref_cat_general">General</string>
    <string name="pref_cat_colors">Colors</string>
    <string name="pref_title_auto_sync">Auto Sync</string>
    <string name="pref_desc_auto_sync">Automatically synchronizes, when you open this screen</string>
    <string name="pref_title_theme_mode">Theme Mode</string>
    <string name="pref_desc_theme_mode">Sets, whether and when to use the Dark/Light mode (requires restart)</string>
    <string name="pref_title_close_mensa_active_color">Enable Mensa closing time</string>
    <string name="pref_desc_close_mensa_active_color">Sets whether the mensa plan should show the next day after a set time</string>
    <string name="pref_title_close_mensa_color">Mensa closing time</string>
    <string name="pref_desc_close_mensa_color">Sets the time when the mensa plan should show the next day\'s menu</string>
    <string name="pref_title_sep_mensa_color">Food Separator Color</string>
    <string name="pref_desc_sep_mensa_color">The background color of the Food Category Separators</string>
    <string name="pref_title_soup_mensa_color">Soups Color</string>
    <string name="pref_desc_soup_mensa_color">The background color of Soups</string>
    <string name="pref_title_main_mensa_color">Main Dishes Color</string>
    <string name="pref_desc_main_mensa_color">The background color of Main Dishes</string>
    <string name="pref_title_garnish_mensa_color">Garnishes Color</string>
    <string name="pref_desc_garnish_mensa_color">The background color of Garnishes</string>
    <string name="pref_title_dessert_mensa_color">Desserts Color</string>
    <string name="pref_desc_dessert_mensa_color">The background color of Desserts</string>
    <string name="pref_title_nonlec_schedule_color">Non-Lecture Color</string>
    <string name="pref_desc_nonlec_schedule_color">The background color of Non-Lecture Events (Exams etc.)</string>
    <string name="pref_title_notfoundlec_schedule_color">Not-Found Lecture Color</string>
    <string name="pref_desc_notfoundlec_schedule_color">The background color of Lectures, that aren\'t in your regular Schedule</string>
    <string name="credits">View Credits</string>
    <string name="version">Version: %1$s (%2$d)</string>
    <string name="bug_subject" translatable="false">[BUG] Bug</string>
    <string name="verifying_api">Verifying Access&#8230;</string>
    <string name="login_warning_normal">A Browser should be open right now. If it\'s not, please consult me:\n\nstudipapp@femtopedia.de</string>
    <string name="login_warning_no_internet">Please enable your internet connection and restart the app.</string>
    <string name="action_refresh">Refresh&#8230;</string>
    <string name="pref_desc_mensa_subscreen">Customize the Mensa section</string>
    <string name="pref_desc_schedule_subscreen">Customize the Schedule section</string>
    <string name="cat_tools">Other Useful Tools</string>
    <string name="button_telegram_bot">Telegram Bot</string>
    <string name="button_okay">Okay</string>
    <string name="button_cancel">Cancel</string>
    <string name="dialog_telegram_desc">The bot is developed and maintained by another person. Please contact its developer for help on any issues!</string>
    <string name="dialog_telegram_title">Telegram Bot</string>
    <string name="pref_desc_shade_factor_schedule">Sets the transparency of the scheduled event cards</string>
    <string name="pref_title_shade_factor_schedule">Transparency</string>
    <string name="button_share">Share&#8230;</string>
    <string name="share_subject">StudiPassau App</string>
    <string name="share_body">Hey, check this out! There is an app called \"StudiPassau\", which helps you manage your lectures easier:\nhttp://femtopedia.de/studip/index.php</string>
    <string name="share_via">Share via&#8230;</string>
    <string name="theme_mode_follow">Use system default</string>
    <string name="theme_mode_battery">Set by Battery Saver</string>
    <string name="theme_mode_light">Always Light</string>
    <string name="theme_mode_dark">Always Dark</string>
    <string name="translate">Help with translation</string>
    <string name="pref_title_filelist_subscreen">Files</string>
    <string name="title_activity_filelist">StudiPassau Files</string>
    <string name="error_no_file">null</string>
    <string name="format_course_title" translatable="false">%1$s %2$s</string>
    <string name="browser_not_found">No browser found!</string>
    <string name="browser_not_found_desc">No compatible Browser found!\nTry installing e.g. Google Chrome.</string>
    <string name="cant_open_file_type">Can\'t open this type of file.\nTry installing a corresponding app!</string>
    <string name="need_permission">You have to accept the following permission request to do this.</string>
    <string name="progress">Progress</string>
    <string name="pref_desc_filelist_subscreen">Customize the Files section</string>
    <string name="dialog_new_app_alert_desc">This app is being rewritten from scratch right now.\nIf you want to test the new app (WITH EVENTUALLY MANY BUGS!) in the alpha, why don\'t you visit the Google Play Store and register for the public alpha. However, it might take a little while until I dare to upload the first alpha version :).</string>
    <string name="dialog_new_app_alert_title">StudiPassau Reforged</string>

</resources>
