<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceScreen
        app:icon="@drawable/ic_tune"
        app:iconTint="@color/colorCompl"
        app:key="data_general_subscreen"
        app:persistent="false"
        app:summary="@string/pref_desc_general_subscreen"
        app:title="@string/pref_title_general_subscreen">

        <PreferenceCategory
            app:iconSpaceReserved="false"
            app:title="@string/pref_cat_general">

            <ListPreference
                app:defaultValue="-1"
                app:entries="@array/theme_mode_entries"
                app:entryValues="@array/theme_mode_data"
                app:iconSpaceReserved="false"
                app:key="theme_mode"
                app:summary="@string/pref_desc_theme_mode"
                app:title="@string/pref_title_theme_mode" />

        </PreferenceCategory>

        <PreferenceCategory
            app:iconSpaceReserved="false"
            app:title="@string/pref_cat_data_sync">

            <SwitchPreferenceCompat
                app:defaultValue="true"
                app:iconSpaceReserved="false"
                app:key="auto_sync"
                app:summary="@string/pref_desc_auto_sync"
                app:title="@string/pref_title_auto_sync" />

        </PreferenceCategory>

    </PreferenceScreen>

    <PreferenceScreen
        app:icon="@drawable/ic_event_note"
        app:key="schedule_subscreen"
        app:persistent="false"
        app:summary="@string/pref_desc_schedule_subscreen"
        app:title="@string/pref_title_schedule_subscreen">

        <PreferenceCategory
            app:iconSpaceReserved="false"
            app:title="@string/pref_cat_colors">

            <com.rarepebble.colorpicker.ColorPreference
                app:colorpicker_showAlpha="false"
                app:defaultValue="#339966"
                app:iconSpaceReserved="false"
                app:key="non_lecture_color"
                app:summary="@string/pref_desc_nonlec_schedule_color"
                app:title="@string/pref_title_nonlec_schedule_color" />

            <com.rarepebble.colorpicker.ColorPreference
                app:colorpicker_showAlpha="false"
                app:defaultValue="#ea3838"
                app:iconSpaceReserved="false"
                app:key="not_found_lecture_color"
                app:summary="@string/pref_desc_notfoundlec_schedule_color"
                app:title="@string/pref_title_notfoundlec_schedule_color" />

            <SeekBarPreference
                app:defaultValue="50"
                app:iconSpaceReserved="false"
                app:key="shade_factor_schedule"
                app:min="0"
                app:showSeekBarValue="true"
                app:summary="@string/pref_desc_shade_factor_schedule"
                app:title="@string/pref_title_shade_factor_schedule" />

        </PreferenceCategory>

    </PreferenceScreen>

    <PreferenceScreen
        app:icon="@drawable/ic_restaurant"
        app:key="mensa_subscreen"
        app:persistent="false"
        app:summary="@string/pref_desc_mensa_subscreen"
        app:title="@string/pref_title_mensa_subscreen">

        <PreferenceCategory
            app:iconSpaceReserved="false"
            app:title="@string/pref_cat_general">

            <SwitchPreference
                app:defaultValue="true"
                app:disableDependentsState="false"
                app:iconSpaceReserved="false"
                app:key="mensa_closing_time_active"
                app:summary="@string/pref_desc_close_mensa_active_color"
                app:title="@string/pref_title_close_mensa_active_color" />

            <studip_uni_passau.femtopedia.de.unipassaustudip.preference.time.TimePreference
                app:defaultValue="900"
                app:dependency="mensa_closing_time_active"
                app:iconSpaceReserved="false"
                app:key="mensa_closing_time"
                app:summary="@string/pref_desc_close_mensa_color"
                app:title="@string/pref_title_close_mensa_color" />

        </PreferenceCategory>

        <PreferenceCategory
            app:iconSpaceReserved="false"
            app:title="@string/pref_cat_colors">

            <com.rarepebble.colorpicker.ColorPreference
                app:colorpicker_showAlpha="false"
                app:defaultValue="#000000"
                app:iconSpaceReserved="false"
                app:key="separator_mensa_color"
                app:summary="@string/pref_desc_sep_mensa_color"
                app:title="@string/pref_title_sep_mensa_color" />

            <com.rarepebble.colorpicker.ColorPreference
                app:colorpicker_showAlpha="false"
                app:defaultValue="#7bad41"
                app:iconSpaceReserved="false"
                app:key="soup_color"
                app:summary="@string/pref_desc_soup_mensa_color"
                app:title="@string/pref_title_soup_mensa_color" />

            <com.rarepebble.colorpicker.ColorPreference
                app:colorpicker_showAlpha="false"
                app:defaultValue="#ea3838"
                app:iconSpaceReserved="false"
                app:key="main_color"
                app:summary="@string/pref_desc_main_mensa_color"
                app:title="@string/pref_title_main_mensa_color" />

            <com.rarepebble.colorpicker.ColorPreference
                app:colorpicker_showAlpha="false"
                app:defaultValue="#61dfed"
                app:iconSpaceReserved="false"
                app:key="garnish_color"
                app:summary="@string/pref_desc_garnish_mensa_color"
                app:title="@string/pref_title_garnish_mensa_color" />

            <com.rarepebble.colorpicker.ColorPreference
                app:colorpicker_showAlpha="false"
                app:defaultValue="#baac18"
                app:iconSpaceReserved="false"
                app:key="desserts_color"
                app:summary="@string/pref_desc_dessert_mensa_color"
                app:title="@string/pref_title_dessert_mensa_color" />

        </PreferenceCategory>

    </PreferenceScreen>

</PreferenceScreen>
