<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/pref_cat_colors">

        <com.rarepebble.colorpicker.ColorPreference
            android:defaultValue="#000000"
            android:key="separator_mensa_color"
            android:summary="@string/pref_desc_sep_mensa_color"
            android:title="@string/pref_title_sep_mensa_color"
            app:colorpicker_showAlpha="false" />

        <com.rarepebble.colorpicker.ColorPreference
            android:defaultValue="#7bad41"
            android:key="soup_color"
            android:summary="@string/pref_desc_soup_mensa_color"
            android:title="@string/pref_title_soup_mensa_color"
            app:colorpicker_showAlpha="false" />

        <com.rarepebble.colorpicker.ColorPreference
            android:defaultValue="#ea3838"
            android:key="main_color"
            android:summary="@string/pref_desc_main_mensa_color"
            android:title="@string/pref_title_main_mensa_color"
            app:colorpicker_showAlpha="false" />

        <com.rarepebble.colorpicker.ColorPreference
            android:defaultValue="#61dfed"
            android:key="garnish_color"
            android:summary="@string/pref_desc_garnish_mensa_color"
            android:title="@string/pref_title_garnish_mensa_color"
            app:colorpicker_showAlpha="false" />

        <com.rarepebble.colorpicker.ColorPreference
            android:defaultValue="#baac18"
            android:key="desserts_color"
            android:summary="@string/pref_desc_dessert_mensa_color"
            android:title="@string/pref_title_dessert_mensa_color"
            app:colorpicker_showAlpha="false" />

    </PreferenceCategory>

</PreferenceScreen>
