<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:checkableBehavior="single"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/nav_schedule"
        android:checkable="true"
        android:icon="@drawable/ic_event_note"
        android:title="@string/pref_title_schedule_subscreen" />

    <item
        android:id="@+id/nav_mensa"
        android:checkable="true"
        android:icon="@drawable/ic_restaurant"
        android:title="@string/pref_title_mensa_subscreen" />

    <item
        android:id="@+id/nav_filelist"
        android:checkable="true"
        android:icon="@drawable/ic_baseline_folder_open"
        android:title="@string/pref_title_filelist_subscreen" />

    <item android:title="@string/cat_misc">
        <menu>
            <item
                android:id="@+id/open_in_browser"
                android:icon="@drawable/ic_insert_link"
                android:title="@string/open_in_browser" />
            <item
                android:id="@+id/nav_manage"
                android:icon="@drawable/ic_build"
                android:title="@string/button_settings" />
            <item
                android:id="@+id/nav_bugreport"
                android:icon="@drawable/ic_bug_report"
                android:title="@string/button_bugreport" />
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_share"
                android:title="@string/button_share" />
            <item
                android:id="@+id/nav_about"
                android:checkable="true"
                android:icon="@drawable/ic_info_outline"
                android:title="@string/button_about" />
        </menu>
    </item>

    <item android:title="@string/cat_tools">
        <menu>
            <item
                android:id="@+id/nav_telegram_bot"
                android:icon="@drawable/ic_telegram_1"
                android:title="@string/button_telegram_bot" />
        </menu>
    </item>

</menu>
